# tanmatsu-ssh

./: .gitignore  CMakeLists.txt  Makefile  README.md
components/badgeteam__terminal-emulator/: .component_hash  CHECKSUMS.json  console.c  idf_component.yml
components/badgeteam__terminal-emulator/include/: console.h
main/: CMakeLists.txt  device_information.c  device_settings.c  device_settings.h  icons.c  icons.h  idf_component.yml  main.c  menu_ssh.c  menu_ssh.h  menu_ssh_edit.c  menu_ssh_edit.h  message_dialog.c  message_dialog.h  settings_ssh.h  terminal.c  textedit.c  util_ssh.c  util_ssh.h
main/common/: display.c  theme.c
main/menu/: menu_ssh.c  menu_ssh_edit.c  settings_ssh.c  util_ssh.c
sdkconfigs/: esp32-p4-function-ev-board  hackerhotel-2026  konsool  tanmatsu
